--- a/index.html
+++ b/index.html
@@ -28,10 +28,9 @@
         </ul>
       </header>
       <section>
-        <h1>requirejs-mode</h1>
+        <h1>Requirejs-mode for Emacs</h1>
 
-<p>Improved javascript <a href="http://requirejs.org">AMD</a> dependencies management for the one true editor.</p>
-
+<iframe width="640" height="360" src="http://www.youtube.com/embed/V6TZNPxpoeo" frameborder="0" allowfullscreen></iframe>
 <p><a href="http://www.youtube.com/watch?v=V6TZNPxpoeo">See it in action</a></p>
 
 
